# src/index.js
@@ -3,8 +3,8 @@ const morgan = require("morgan");
 const cors = require("cors");
 const bodyParser = require("body-parser");
 const dotenv = require("dotenv");
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
+const swaggerUi = require("swagger-ui-express");
+const swaggerDocument = require("../swagger.json");
 
 const app = express();
 dotenv.config();
@@ -23,11 +23,21 @@ app.use(bodyParser.json({ limit: "50mb" }));
 app.use(bodyParser.urlencoded({ limit: "50mb", extended: true }));
 
 // Routes
-app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use("/api/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/auth", require("./routes/auth.routes"));
 app.use("/api/users", require("./routes/users.routes"));
+app.use("/api/payments-source", require("./routes/payments.routes"));
+app.use("/api/rides", require("./routes/rides.routes"));
 
 // Starting the server
 app.listen(app.get("port"), () => {
   console.log(`Server on port ${app.get("port")}`);
+});
+
+// Dummy data
+const { newUser } = require("./entities/usersEntity");
+const { users } = require("./data/dummyData");
+
+users.forEach(user => {
+  newUser(user);
 });
